moar cleanup