@@ -6,30 +6,29 @@
  */
 package com.salesforce.apollo.stereotomy.identifier.spec;
 
-import static com.salesforce.apollo.cryptography.QualifiedBase64.bs;
-import static java.nio.charset.StandardCharsets.UTF_8;
-import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
-
-import java.security.PublicKey;
-import java.util.List;
-import java.util.stream.Stream;
-
 import com.salesforce.apollo.cryptography.Digest;
 import com.salesforce.apollo.cryptography.DigestAlgorithm;
 import com.salesforce.apollo.cryptography.SigningThreshold;
 import com.salesforce.apollo.cryptography.SigningThreshold.Weighted.Weight;
 import com.salesforce.apollo.utils.Hex;
 
+import java.security.PublicKey;
+import java.util.List;
+import java.util.stream.Stream;
+
+import static com.salesforce.apollo.cryptography.QualifiedBase64.bs;
+import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.util.stream.Collectors.joining;
+import static java.util.stream.Collectors.toList;
+
 /**
  * @author hal.hildebrand
- *
  */
 public class KeyConfigurationDigester {
 
     public static Digest digest(SigningThreshold signingThreshold, List<Digest> nextKeyDigests) {
         var st = signingThresholdRepresentation(signingThreshold);
-        var digestAlgorithm = nextKeyDigests.get(0).getAlgorithm();
+        var digestAlgorithm = nextKeyDigests.getFirst().getAlgorithm();
 
         var digest = digestAlgorithm.digest(st);// digest
 
